[CHORE] Add Continuous Deployment to GCP and integration with SonarCloud